src-tauri/tests/snapshots/pipeline_scenarios__copilot_abort_flush_renders_partial_text_and_pending_tool.snap
---
source: tests/pipeline_scenarios.rs
expression: finish_normalized(&mut pipeline)
---
- role: assistant
  id: live-0
  content_length: 2
  content:
    - type: tool-call
      tool_name: read
      tool_call_id: cp-tool-5
      args_keys:
        - path
      args_text_length: 25
      has_result: false
      result_kind: ~
      result_preview: ~
      streaming_status: ~
    - type: text
      text: Halfway through an answer
  status:
    type: complete
    reason: stop
  streaming: ~
- role: system
  id: live-1
  content_length: 1
  content:
    - type: text
      text: 0.0s
  status: ~
  streaming: ~
