src-tauri/tests/snapshots/pipeline_scenarios__copilot_reasoning_deltas_then_message_dedupes.snap
---
source: tests/pipeline_scenarios.rs
expression: finish_normalized(&mut run_copilot(&events))
---
- role: assistant
  id: live-0
  content_length: 2
  content:
    - type: reasoning
      text_length: 21
      text_preview: Weighing the options.
      streaming: ~
    - type: text
      text: Option B is better.
  status:
    type: complete
    reason: stop
  streaming: ~
- role: system
  id: live-1
  content_length: 1
  content:
    - type: text
      text: 0.0s
  status: ~
  streaming: ~
