src-tauri/tests/snapshots/pipeline_scenarios__copilot_tool_failure_uses_error_text.snap
---
source: tests/pipeline_scenarios.rs
expression: finish_normalized(&mut run_copilot(&events))
---
- role: assistant
  id: live-0
  content_length: 2
  content:
    - type: tool-call
      tool_name: bash
      tool_call_id: cp-tool-9
      args_keys:
        - command
      args_text_length: 24
      has_result: true
      result_kind: string
      result_preview: command exited with code 101
      streaming_status: ~
    - type: text
      text: The tests failed.
  status:
    type: complete
    reason: stop
  streaming: ~
- role: system
  id: live-1
  content_length: 1
  content:
    - type: text
      text: 0.0s
  status: ~
  streaming: ~
